# analytis

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
deploy/: .env.prod.example  Dockerfile.app  Dockerfile.app.dockerignore  README.md  cloud-init.yaml  deploy.sh  docker-compose.prod.yml  finish.sh  provision-oci.sh  sync-model.sh
deploy/backup/: pg-backup.sh
deploy/cron/: daily-rescore.sh  push-dispatcher.sh
deploy/nginx/: default.conf.template
docs/: deploy-oracle-cloud.md
docs/superpowers/plans/: 2026-06-12-plan-01-foundation-and-ingestion.md  2026-06-13-plan-02-features-and-dixon-coles.md  2026-06-13-plan-03-ensemble-and-odds.md  2026-06-13-plan-04-frontend.md  2026-06-14-plan-05-pipeline-hardening.md  2026-06-20-acertos-dashboard.md  2026-06-20-pwa-fase1.md  2026-06-20-pwa-fase2-webpush.md
docs/superpowers/specs/: 2026-06-12-football-analytics-design.md  2026-06-13-frontend-design.md  2026-06-20-acertos-dashboard-design.md  2026-06-20-pwa-fase1-design.md  2026-06-20-pwa-fase2-webpush-design.md
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/scripts/: generate-icons.mjs
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ApiKeyDialog.tsx  PushPrompt.tsx
frontend/src/hooks/: useAccuracySummary.ts  useClvSummary.ts  useClvTimeline.ts  useDashboardScores.ts  useMatchCardSummary.ts  useMatchExplanation.ts  useMatchOdds.ts  useMatchPredictions.ts  useMatchValueBets.ts  useMatches.ts  useScorelineGrid.ts
frontend/src/lib/: api.test.ts  api.ts  auth.test.ts  auth.ts  models.ts  push.ts  query-client.ts
frontend/src/pages/: AccuracyPage.tsx  ClvSummaryPage.tsx  DashboardPage.tsx  HomePage.tsx  MatchDetailPage.tsx  MethodologyPage.tsx  NotFoundPage.tsx  ValueBetsPage.tsx
frontend/src/styles/: globals.css
frontend/src/test/: test-utils.tsx
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_elo_history_and_confederations.py  0003_odds_and_bets.py  0004_match_stage.py  0005_push_notifications.py
src/analytis/: __init__.py  config.py  logging.py
src/analytis/api/: auto_ingest.py  auto_score.py  (+2 more)
tests/: conftest.py
tests/unit/: test_config.py  test_logging.py
(+205 files in other folders)
