[project]
name = "analytis"
version = "0.1.0"
description = "Football analytics backend platform — pre-match probabilistic predictions"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "psycopg[binary,pool]>=3.2.3",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
    "apscheduler>=3.10.4",
    "httpx>=0.27.2",
    "numpy>=2.1.0",
    "pandas>=2.2.3",
    "pyarrow>=18.0.0",
    "py-vapid>=1.9.0",
    "pywebpush>=2.0.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.1",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "xgboost>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.115.0",
    "respx>=0.21.1",
    "testcontainers[postgres]>=4.8.2",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "types-python-dateutil>=2.9.0",
    "pre-commit>=4.0.1",
]

[project.scripts]
analytis = "analytis.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analytis"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "RUF", "N", "C4", "PT", "TID"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["B011", "N818"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["apscheduler.*", "testcontainers.*", "scipy.*", "sklearn.*", "pywebpush.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: tests that require external services (Postgres, network)",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore:Using `httpx` with `starlette.testclient`",
]

[tool.coverage.run]
source = ["src/analytis"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
